# ai-chat-template

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini  run.py
.hephaestus/: catalog-info.yaml
docs/: mkdocs.yaml
src/: logging_config.py
src/application/use_cases/: chat_ai.py
src/domain/strategies/: ai_strategy.py
src/domain/use_cases/: chat_ai.py
src/infrastructure/ai/langgraph_services/callbacks/: custom_callback_handler.py
src/infrastructure/ai/langgraph_services/graphs/: default_graph.py
src/infrastructure/ai/langgraph_services/interfaces/: graph_builder.py
src/infrastructure/ai/langgraph_services/middlewares/: handle_tool_errors.py
src/infrastructure/ai/strategies/: langgraph_strategy.py
src/infrastructure/config/: settings.py
src/main/adapters/: request_adapter.py
src/main/composers/chat/: send_message.py
src/main/routes/: chat.py
src/main/server/: server.py
src/presentation/controllers/chat/: send_message.py
src/presentation/dtos/: chat.py
src/presentation/http_types/: http_request.py  http_response.py
src/presentation/interfaces/: controller_interface.py
src/presentation/middlewares/: error_handler.py
src/tests/: conftest.py  test_adapters.py  test_controllers.py  test_dtos.py  test_http_types.py  test_settings.py  test_use_cases.py
