[project]
name = "ai-chat-scaffold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-json-logger",
    "fastapi",
    "langgraph",
    "psycopg",
    "psycopg",
    "pydantic",
    "pytest",
    "pytest_asyncio",
    "ruff",
    "sqlmodel",
    "pydantic_settings",
    "uvicorn",
    "langgraph_supervisor",
    "langchain",
    "langchain_openai",
    "pyboxen"
]
